@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r8p1",
+  "version": "v8r8p2",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p21",
+      [ "Dirac", "v6r17p22",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r9",
